2010-07-13  Andreas Kling  <andreas.kling@nokia.com>

Reviewed by Darin Adler.

        Canvas: drawImage() with wrong 'image' argument type should always throw TypeError
        https://bugs.webkit.org/show_bug.cgi?id=42160

        Updated 2d.drawImage.wrongtype.html from http://dvcs.w3.org/hg/html/
        and unskipped it.

        * canvas/philip/tests/2d.drawImage.wrongtype-expected.txt:
        * canvas/philip/tests/2d.drawImage.wrongtype.html:
        * platform/mac/Skipped:
        * platform/qt/Skipped:
2010-07-13  Andreas Kling  <andreas.kling@nokia.com>

        Reviewed by Darin Adler.

        Canvas: drawImage() with wrong 'image' argument type should always throw TypeError
        https://bugs.webkit.org/show_bug.cgi?id=42160

        Test: canvas/philip/tests/2d.drawImage.wrongtype.html

        * bindings/js/JSCanvasRenderingContext2DCustom.cpp:
        (WebCore::JSCanvasRenderingContext2D::drawImage): Throw TypeError instead of
        TYPE_MISMATCH_ERR if 'image' argument is not an image, canvas or video element.

Canonical link: https://commits.webkit.org/54106@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@63252 268f45cc-cd09-0410-ab3c-d52691b4dbfc